--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is the first page</h1>
+    <h1>this is third commit</h1>
 </body>
 </html>
